<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mis Lugares</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mis_lugares">Mis Lugares</string>
    <string name="mostrar_lugares">Mostrar Lugares</string>
    <string name="preferencias">Preferencias</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="nombre">Nombre:</string>
    <string name="tipo">Tipo:</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="url">Url:</string>
    <string name="comentario">Comentario:</string>
    <string name="des_nom">algo que identifique el lugar</string>
    <string name="des_dir">dirección del lugar</string>
    <string name="des_url">página_web</string>
    <string name="des_com">introduce tus notas</string>
    <string name="des_tel">teléfono para contactar</string>

</resources>
